# discord-file-system

./: .env.example  .gitignore  Dockerfile  README.md  app.py  compose.yaml  dis_commands.py  discord cloud no enc.py  discord_cloud.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.py  secure cloud.py  secure_cloud.py  verify_imports.py
.github/: copilot-instructions.md
Data/: info.txt
app/: __init__.py  main.py
src/: dis_commands.py
src/app/: main.py  test_import.py
src/static/css/: main.css
src/static/js/: index.js  main.js
src/templates/: index.html  main.html  uploaded.html
src/utils/: file_ops.py  util.py
templates/: channels.html  index.html  main.html  uploaded.html
utils/: __init__.py  util.py
