[project]
name = "discord-file-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "cryptography>=46.0.3",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "logging>=0.4.9.6",
]
